--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foodapp",
-  "homepage": "https://shadi-isshac.github.io/foodapp",
+  "homepage": "https://shadi-isshac.github.io/food-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
